# velodyne

velodyne_driver/: CMakeLists.txt  package.xml
velodyne_driver/include/velodyne_driver/: input.h  ring_sequence.h
velodyne_driver/launch/: nodelet_manager.launch  velo.launch
velodyne_driver/src/driver/: driver.cc  driver.h  nodelet.cc
velodyne_driver/src/lib/: input.cc
velodyne_msgs/: CMakeLists.txt
velodyne_msgs/msg/: VelodyneDeskewInfo.msg  VelodynePacket.msg  VelodyneSweepInfo.msg
velodyne_pointcloud/: CMakeLists.txt  package.xml
velodyne_pointcloud/cfg/: CloudNode.cfg  TransformNode.cfg
velodyne_pointcloud/include/velodyne_pointcloud/: calibration.h  point_types.h  rawdata.h
velodyne_pointcloud/launch/: 32e_points.launch  VLP32C_points.launch  VLP32_points.launch  cloud_nodelet.launch  transform_nodelet.launch
velodyne_pointcloud/scripts/: gen_calibration.py
velodyne_pointcloud/src/conversions/: cloud_nodelet.cc  colors.cc  colors.h  convert.cc  convert.h  transform.cc  transform.h  transform_nodelet.cc
velodyne_pointcloud/src/lib/: rawdata.cc
velodyne_pointcloud/tests/: CMakeLists.txt  static_vehicle_tf.launch  test_calibration.cpp
